--- a/UEE - Line Lite Chat App Project - GitHub Classroom/pubspec.yaml
+++ b/UEE - Line Lite Chat App Project - GitHub Classroom/pubspec.yaml
@@ -23,6 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^1.3.0
+  path: ^1.8.0
+  firebase_storage: ^8.1.3
+  image_picker: ^0.8.0+4
+  
+
 
   provider:
   dio:
@@ -30,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  story_view: ^0.13.1
+  otp_text_field: ^1.1.1
+  
 
 dev_dependencies:
   flutter_app_name: ^0.1.1
@@ -45,49 +54,20 @@ flutter_launcher_name:
   name: "Line Lite"
 # The following section is specific to Flutter.
 flutter:
-  assets:
-     - assets/images/
-     - assets/images/Backstreet Girls.jpg
-     - assets/images/Family Club.jpg
-     - assets/images/Funny Folk.jpg
-     - assets/images/Girls on Fire.jpg
-     - assets/images/Gossip News.jpg
-     - assets/images/man 1.jpg
-     - assets/images/man 2.jpg
-     - assets/images/man 3.jpg
-     - assets/images/man 4.jpg
-     - assets/images/Market Yard.jpg
-     - assets/images/My Family.png
-     - assets/images/Pen Pals.jpg
-     - assets/images/woman 1.jpg
-     - assets/images/woman 2.jpg
-     - assets/images/woman 3.jpg
-     - assets/images/woman 4.jpg
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#   assets:
-#      - images/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-#     - images/Backstreet Girls.jpg
-#     - images/Family Club.jpg
-#     - images/Funny Folk.jpg
-#     - images/Girls on Fire.jpg
-#     - images/Gossip News.jpg
-#     - images/man 1.jpg
-#     - images/man 2.jpg
-#     - images/man 3.jpg
-#     - images/Market Yard.jpg
-#     - images/My Family.jpg
-#     - images/Pen Pals.jpg
-#     - images/woman 1.jpg
-#     - images/woman 2.jpg
-#     - images/woman 3.jpg
-#     - images/woman 4.jpg
+  assets:
+    - assets/img1.png
+    - assets/img2.png
+    - assets/img3.png
+    - assets/images/
+    
+     
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
