--- a/UEE - Line Lite Chat App Project - GitHub Classroom/pubspec.yaml
+++ b/UEE - Line Lite Chat App Project - GitHub Classroom/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_local_notifications: ^8.2.0
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_app_name: ^0.1.1
