added modified login part

--- a/UEE - Line Lite Chat App Project - GitHub Classroom/pubspec.yaml
+++ b/UEE - Line Lite Chat App Project - GitHub Classroom/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
     - assets/img1.png
     - assets/img2.png
     - assets/img3.png
+    - assets/verification.png
+    - assets/login.png
     - assets/images/
     
      
